--- a/assets/html/Contact.html
+++ b/assets/html/Contact.html
@@ -10,7 +10,7 @@
   <!-- bootstrap css link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-  <link rel="stylesheet" href="../css/Contact.css"/>
+  <link rel="stylesheet" href="../css/Contact.css" />
 
 </head>
 
@@ -46,30 +46,51 @@
       <hr>
       <!-- Name section -->
       <p class="card-text">Name
-        <div class="input-group flex-nowrap">
-          <input type="text" class="form-control" placeholder="Name" aria-label="Username" aria-describedby="addon-wrapping">
-        </div>
-        <!-- Email -->
-        <div class="mb-3">
-          <label for="exampleFormControlInput1" class="form-label">Email address</label>
-          <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-        </div>
-        <!-- message Box -->
-        <div class="mb-3">
-          <label for="exampleFormControlTextarea1" class="form-label">Message</label>
-          <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
+      <div class="input-group flex-nowrap">
+        <input type="text" class="form-control" placeholder="Name" aria-label="Username"
+          aria-describedby="addon-wrapping">
+      </div>
+      <!-- Email -->
+      <div class="mb-3">
+        <label for="exampleFormControlInput1" class="form-label">Email address</label>
+        <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+      </div>
+      <!-- message Box -->
+      <div class="mb-3">
+        <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+        <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+      </div>
       </p>
       <a href="https://www.youtube.com/watch?v=dQw4w9WgXcQ" class="card-link">Submit</a>
     </div>
   </div>
+
+
   <!-- footer -->
-  <footer>
-    <section class="footer">
+  <footer class="footer">
+    <section>
       Copyright@WhyCopyThis?
       <a href="../../index.html">Home</a>
       <a href="Portfolio.html">Projects</a>
     </section>
+    <!-- social media buttons -->
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-primary">
+        <a href="https://www.linkedin.com/in/wells-wu-169497125/">
+          <img src="../images/linkedin.png" alt="linkedin" class="smImg">
+        </a>
+      </button>
+      <button type="button" class="btn btn-primary">
+        <a href="https://www.facebook.com/">
+          <img src="../images/fb.png" alt="facebook" class="smImg">
+        </a>
+      </button>
+      <button type="button" class="btn btn-primary">
+        <a href="https://discord.com/">
+          <img src="../images/discord.jfif" alt="discord" class="smImg">
+        </a>
+      </button>
+    </div>
   </footer>
   <!-- bootstrap javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
