--- a/assets/html/Portfolio.html
+++ b/assets/html/Portfolio.html
@@ -10,7 +10,7 @@
   <!-- bootstrap css link -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
-
+  <link rel="stylesheet" href="../css/Projects.css">
 </head>
 
 <body>
@@ -37,9 +37,36 @@
       </div>
     </div>
   </nav>
-    <!-- bootstrap javascript -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+
+  <!-- footer -->
+  <footer class="footer">
+    <section>
+      Copyright@WhyCopyThis?
+      <a href="../../index.html">Home</a>
+      <a href="Contact.html">Contact Info</a>
+    </section>
+    <!-- Social Media Buttons -->
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-primary">
+        <a href="https://www.linkedin.com/in/wells-wu-169497125/">
+          <img src="../images/linkedin.png" alt="linkedin" class="smImg">
+        </a>
+      </button>
+      <button type="button" class="btn btn-primary">
+        <a href="https://www.facebook.com/">
+          <img src="../images/fb.png" alt="facebook" class="smImg">
+        </a>
+      </button>
+      <button type="button" class="btn btn-primary">
+        <a href="https://discord.com/">
+          <img src="../images/discord.jfif" alt="discord" class="smImg">
+        </a>
+      </button>
+  </footer>
+  <!-- bootstrap javascript -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+    crossorigin="anonymous"></script>
 </body>
-    
+
 </html>
