--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -11,6 +12,7 @@
     integrity="sha384-wEmeIV1mKuiNpC+IOBjI7aAzPcEZeedi5yW5f2yOq55WWLwNGmvvx4Um1vskeMj0" crossorigin="anonymous">
   <link rel="stylesheet" href="assets/css/styles.css">
 </head>
+
 <body>
   <!-- Navbar -->
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -35,19 +37,60 @@
       </div>
     </div>
   </nav>
-<!-- About Me main page -->
-  <div class="example-container">
-    <div class="example-row">
-      <div class="example-content-main">Insert Image of me</div>
-      <div class="example-content-secondary">
-        <h2>Introduction</h2>
-        <p>Insert description of myself</p>
+  <!-- About Me main page -->
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <img src="assets/images/11936494_10204788472933039_1131856019876724852_o.jpg" class="img-fluid"
+          alt="NewYork2015">
+      </div>
+      <div class="col-sm">
+        <h3>Hi, I'm Wells Wu</h3>
+        <p>
+          Hello, just a short self-insert here. I am and aspiring full-stack developer currently studying at UC Irvine.
+          I also have a Bachelor's in Applied Mathematics from UC Riverside. Previously, I worked as an Data Entry
+          Specialist at Rubber-Cal Inc. Since I'm still new to the field I am lacking a bit on the projects side, but I
+          am rectifying that right now.
+        </p>
+        <p>
+          For hobbies, I am an avid Path of Exile player, with experience with some other Action RPGs as well. I also
+          play League of Legends quite a bit and you can see me playing plenty of other variety games. Aside from video
+          games, I greatly enjoy tinkering with PC-Building. I have a plan to upgrade to a full custom water loop as
+          soon as I can get my hands on a new graphics card.
+        </p>
       </div>
     </div>
   </div>
+  <!-- footer -->
+  <footer class="footer">
+    <section>
+      Copyright@WhyCopyThis?
+      <a href="assets/html/Portfolio.html">Projects</a>
+      <a href="assets/html/Contact.html">Contact Info</a>
+    </section>
+    <!-- social media buttons -->
+    <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-primary">
+        <a href="https://www.linkedin.com/in/wells-wu-169497125/">
+          <img src="assets/images/linkedin.png" alt="linkedin" class="smImg">
+        </a>
+      </button>
+      <button type="button" class="btn btn-primary">
+        <a href="https://www.facebook.com/">
+          <img src="assets/images/fb.png" alt="facebook" class="smImg">
+        </a>
+      </button>
+      <button type="button" class="btn btn-primary">
+        <a href="https://discord.com/">
+          <img src="assets/images/discord.jfif" alt="discord" class="smImg">
+        </a>
+      </button>
+  </footer>
 
   <!-- bootstrap javascript -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8" crossorigin="anonymous"></script>
+    integrity="sha384-p34f1UUtsS3wqzfto5wAAmdvj+osOnFyQFpp4Ua3gs/ZVWx6oOypYoCJhGGScy+8"
+    crossorigin="anonymous"></script>
 </body>
+
 </html>
