added Portfolio Grid

--- a/assets/html/Portfolio.html
+++ b/assets/html/Portfolio.html
@@ -38,6 +38,55 @@
     </div>
   </nav>
 
+  <div class="container">
+    <div class="row">
+      <div class="col-sm">
+        <div class="card" style="width: 100%;">
+          <img src="../images/stonks.jpg" class="card-img-top" alt="STONKS" class="projImg">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card" style="width: 100%;">
+          <img src="../images/pogchamp.png" class="card-img-top" alt="POGCHAMP" class="projImg">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card" style="width: 100%;">
+          <img src="../images/programmer.jpg" class="card-img-top" alt="Something of a Scientist" class="projImg">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+      <div class="col-sm">
+        <div class="card" style="width: 100%;">
+          <img src="../images/doubt.png" class="card-img-top" alt="Press X to doubt" class="projImg">
+          <div class="card-body">
+            <h5 class="card-title">Card title</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
+              content.</p>
+            <a href="#" class="btn btn-primary">Go somewhere</a>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+
   <!-- footer -->
   <footer class="footer">
     <section>
