added descriptions and titles for portfolio page

--- a/assets/html/Portfolio.html
+++ b/assets/html/Portfolio.html
@@ -41,46 +41,42 @@
   <div class="container">
     <div class="row">
       <div class="col-sm">
-        <div class="card" style="width: 100%;">
+        <div class="card text-white bg-success" style="width: 100%;">
           <img src="../images/stonks.jpg" class="card-img-top" alt="STONKS" class="projImg">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Cat Hash</h5>
+            <p class="card-text">A quick app that helps you hash those wonderful Doge Coins to help you GET RICH FAST!</p>
+            <a href="https://dogecoin.com/" class="btn btn-primary">STONKS</a>
           </div>
         </div>
       </div>
       <div class="col-sm">
-        <div class="card" style="width: 100%;">
+        <div class="card text-white bg-success" style="width: 100%;">
           <img src="../images/pogchamp.png" class="card-img-top" alt="POGCHAMP" class="projImg">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">God Gamer Mode</h5>
+            <p class="card-text">Ever wanted to obtain godhood and dominate every game you play? Want to make that Twitch chat fill up with Pogchamps? Well this is the app for you!</p>
+            <a href="https://lol-script.com/" class="btn btn-primary">POGGERS!</a>
           </div>
         </div>
       </div>
       <div class="col-sm">
-        <div class="card" style="width: 100%;">
+        <div class="card text-white bg-success" style="width: 100%;">
           <img src="../images/programmer.jpg" class="card-img-top" alt="Something of a Scientist" class="projImg">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Genius Programmer</h5>
+            <p class="card-text">An example of my Absoute prowess when it comes to coding. This is Actual footage since Im just an utter genius.</p>
+            <a href="https://hackertyper.net/" class="btn btn-primary">Hackerman</a>
           </div>
         </div>
       </div>
-      <div class="col-sm">
-        <div class="card" style="width: 100%;">
+      <div class="col-sm">    
+        <div class="card text-white bg-success" style="width: 100%;">
           <img src="../images/doubt.png" class="card-img-top" alt="Press X to doubt" class="projImg">
           <div class="card-body">
-            <h5 class="card-title">Card title</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's
-              content.</p>
-            <a href="#" class="btn btn-primary">Go somewhere</a>
+            <h5 class="card-title">Half-Life 3</h5>
+            <p class="card-text">Yea, I did it. I made Half-Life 3. I took the source code for 2 and made a 3rd game. It focusses heavily on the physics engine. Definitely Real.</p>
+            <a href="https://www.half-life.com/en/alyx/" class="btn btn-primary">3rd Valve Game??</a>
           </div>
         </div>
       </div>
