--- a/assets/html/Portfolio.html
+++ b/assets/html/Portfolio.html
@@ -15,7 +15,7 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="../../index.html">Wells's Website</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -39,24 +39,32 @@
   </nav>
 
   <div class="container">
+    <h2>Portfolio: </h2>
     <div class="row">
       <div class="col-sm">
         <div class="card text-white bg-success" style="width: 100%;">
-          <img src="../images/stonks.jpg" class="card-img-top" alt="STONKS" class="projImg">
+          <img src="../images/gyeezyimg.jpg" class="card-img-top" alt="STONKS" class="projImg">
           <div class="card-body">
-            <h5 class="card-title">Cat Hash</h5>
-            <p class="card-text">A quick app that helps you hash those wonderful Doge Coins to help you GET RICH FAST!</p>
-            <a href="https://dogecoin.com/" class="btn btn-primary">STONKS</a>
+            <h5 class="card-title">G-Yeezy Game Search</h5>
+            <p class="card-text">A games data site. It allows you to search games and obtain information regarding those
+              games. A mix of practicality and fun , unfortunately overshadowed by legitmate websites like Steam Charts.
+            </p>
+            <a href="https://bwclark90.github.io/G-Yeezy-project/index.html" class="btn btn-primary">Site</a>
+            <a href="https://github.com/bwclark90/G-Yeezy-project" class="btn btn-primary">Repo</a>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="card text-white bg-success" style="width: 100%;">
-          <img src="../images/pogchamp.png" class="card-img-top" alt="POGCHAMP" class="projImg">
+          <img src="../images/scrnst1.png" class="card-img-top" alt="weatherdash" class="projImg">
           <div class="card-body">
-            <h5 class="card-title">God Gamer Mode</h5>
-            <p class="card-text">Ever wanted to obtain godhood and dominate every game you play? Want to make that Twitch chat fill up with Pogchamps? Well this is the app for you!</p>
-            <a href="https://lol-script.com/" class="btn btn-primary">POGGERS!</a>
+            <h5 class="card-title">Weather-Dashboard</h5>
+            <p class="card-text">This site allows you to search a city and it will provide the current weather
+              information and the 6 day forecast. Your
+              seaches will then be stored in the search History via local Storage which can be accesed on future uses.
+            </p>
+            <a href="https://wellswu4621.github.io/Weather-Dashboard/" class="btn btn-primary">Site</a>
+            <a href="https://github.com/WellsWu4621/Weather-Dashboard" class="btn btn-primary">Repo</a>
           </div>
         </div>
       </div>
@@ -65,17 +73,19 @@
           <img src="../images/programmer.jpg" class="card-img-top" alt="Something of a Scientist" class="projImg">
           <div class="card-body">
             <h5 class="card-title">Genius Programmer</h5>
-            <p class="card-text">An example of my Absoute prowess when it comes to coding. This is Actual footage since Im just an utter genius.</p>
+            <p class="card-text">An example of my Absoute prowess when it comes to coding. This is Actual footage since
+              Im just an utter genius.</p>
             <a href="https://hackertyper.net/" class="btn btn-primary">Hackerman</a>
           </div>
         </div>
       </div>
-      <div class="col-sm">    
+      <div class="col-sm">
         <div class="card text-white bg-success" style="width: 100%;">
           <img src="../images/doubt.png" class="card-img-top" alt="Press X to doubt" class="projImg">
           <div class="card-body">
             <h5 class="card-title">Half-Life 3</h5>
-            <p class="card-text">Yea, I did it. I made Half-Life 3. I took the source code for 2 and made a 3rd game. It focusses heavily on the physics engine. Definitely Real.</p>
+            <p class="card-text">Yea, I did it. I made Half-Life 3. I took the source code for 2 and made a 3rd game. It
+              focusses heavily on the physics engine. Definitely Real.</p>
             <a href="https://www.half-life.com/en/alyx/" class="btn btn-primary">3rd Valve Game??</a>
           </div>
         </div>
@@ -92,6 +102,11 @@
     </section>
     <!-- Social Media Buttons -->
     <div class="btn-group" role="group" aria-label="Basic example">
+      <button type="button" class="btn btn-primary">
+        <a href="https://github.com/WellsWu4621/">
+          <img src="../images/gitoctocat.png" alt="octocat" class="smImg">
+        </a>
+      </button>
       <button type="button" class="btn btn-primary">
         <a href="https://www.linkedin.com/in/wells-wu-169497125/">
           <img src="../images/linkedin.png" alt="linkedin" class="smImg">
