--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
   <!-- Navbar -->
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark sticky-top">
     <div class="container-fluid">
       <a class="navbar-brand" href="index.html">Wells's Website</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
@@ -71,6 +71,11 @@
     <!-- social media buttons -->
     <div class="btn-group" role="group" aria-label="Basic example">
       <button type="button" class="btn btn-primary">
+        <a href="https://github.com/WellsWu4621/">
+          <img src="assets/images/gitoctocat.png" alt="octocat" class="smImg">
+        </a>
+      </button>
+      <button type="button" class="btn btn-primary">
         <a href="https://www.linkedin.com/in/wells-wu-169497125/">
           <img src="assets/images/linkedin.png" alt="linkedin" class="smImg">
         </a>
@@ -85,6 +90,7 @@
           <img src="assets/images/discord.jfif" alt="discord" class="smImg">
         </a>
       </button>
+    </div>
   </footer>
 
   <!-- bootstrap javascript -->
