--- a/assets/html/Portfolio.html
+++ b/assets/html/Portfolio.html
@@ -70,23 +70,32 @@
       </div>
       <div class="col-sm">
         <div class="card text-white bg-success" style="width: 100%;">
-          <img src="../images/programmer.jpg" class="card-img-top" alt="Something of a Scientist" class="projImg">
+          <img src="../images/bonus.png" class="card-img-top" alt="Something of a Scientist" class="projImg">
           <div class="card-body">
-            <h5 class="card-title">Genius Programmer</h5>
-            <p class="card-text">An example of my Absoute prowess when it comes to coding. This is Actual footage since
-              Im just an utter genius.</p>
-            <a href="https://hackertyper.net/" class="btn btn-primary">Hackerman</a>
+            <h5 class="card-title">Employee-Tracker</h5>
+            <p class="card-text">This command-line application allows you to view, add, update, and delete, from a
+              database that stores Employee data.
+            </p>
+
+            <a href="https://github.com/WellsWu4621/Employee-Tracker" class="btn btn-primary">Repo</a>
           </div>
         </div>
       </div>
       <div class="col-sm">
         <div class="card text-white bg-success" style="width: 100%;">
-          <img src="../images/doubt.png" class="card-img-top" alt="Press X to doubt" class="projImg">
+          <img src="../images/E2ALogin.png" class="card-img-top" alt="Something of a Scientist" class="projImg">
           <div class="card-body">
-            <h5 class="card-title">Half-Life 3</h5>
-            <p class="card-text">Yea, I did it. I made Half-Life 3. I took the source code for 2 and made a 3rd game. It
-              focusses heavily on the physics engine. Definitely Real.</p>
-            <a href="https://www.half-life.com/en/alyx/" class="btn btn-primary">3rd Valve Game??</a>
+            <h5 class="card-title">Surprise Mechanics</h5>
+            <p class="card-text">This project is a simple betting site. The site has several roles: users: all users
+              start with
+              100 amount of tokens,
+              must provide discord authentication. betters: can add bets and join bets. witness: has the ability to
+              oversee and
+              determine the result of the match. Paid tokens worth 10% of the winning pool. It also has a Slot Machine
+              game that
+              allows you to generate more tokens.</p>
+            <a href="https://dry-island-15959.herokuapp.com/" class="btn btn-primary">Site</a>
+            <a href="https://github.com/WellsWu4621/Surprise-Mechanics" class="btn btn-primary">Repo</a>
           </div>
         </div>
       </div>
